new commits as of dec. 29.2021

--- a/css/fullpalette.css
+++ b/css/fullpalette.css
@@ -9,23 +9,25 @@
 /*******COLORS*******/
 header {
   min-height: 400px;
-  background-color: #f6f6f6;
+  background-color: #eeeeeed5;
 }
 
 .logo {
   display: block;
   margin: auto;
+  justify-content: center;
   height: 30px;
   padding: 15px 0 10px;
 }
 
 .address {
-  height: 30px;
+  height: 20px;
+  display: block;
   justify-content: center;
   background-color: #eaeaea;
   font-size: 16px;
   font-weight: 500;
-  padding: 10px 0 10px 25%;
+  padding: 10px 0 10px 30%;
 }
 
 i {
@@ -90,7 +92,7 @@ main {
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   margin-top: -15%;
-  background-color: #f6f6f6;
+  background-color: #eeeeeed5;
 }
 
 .menu-title {
@@ -115,10 +117,10 @@ main {
   padding: 5px 0 0 20px;
   margin-top: 20px;
   font-weight: lighter;
+  -webkit-animation: fadein 2s;
 }
 
 .underline {
-  padding-bottom: 5px;
   border-bottom: 3px solid #99e2d0;
   line-height: 30px;
 }
@@ -129,6 +131,8 @@ main {
   width: 95%;
   margin: 10px auto;
   background-color: #fff;
+  animation: dish-load 1000ms ease-in;
+  overflow: hidden;
 }
 
 .menu-desc {
@@ -149,7 +153,7 @@ main {
 .sub-menu :nth-child(2) {
   display: block;
   padding: 0 5px 0 3px;
-  width: 10%;
+  width: 20%;
   font-weight: bold;
 }
 
@@ -176,6 +180,47 @@ button:hover {
   background: linear-gradient(#fface8, #ae80e5);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
+}
+
+@keyframes dish-load {
+  0% {
+    color: white;
+    box-shadow: 0 10px 10px 0 white;
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.check {
+  width: 60px;
+  height: 40px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #99e2d0;
+  margin-top: -37px;
+  padding-top: 25px;
+  margin-right: -65px;
+  transition: margin-right 1500ms ease;
+}
+.check .fas {
+  transition: transform 1500ms ease 100ms;
+  color: #fff;
+}
+
+.sub-menu:hover .check {
+  margin-right: 0px;
+}
+.sub-menu:hover .check .fas {
+  transform: 1500ms rotate(-300deg);
 }
 
 /*# sourceMappingURL=fullpalette.css.map */
