--- a/sass/fullpalette.scss
+++ b/sass/fullpalette.scss
@@ -28,7 +28,6 @@ main {
   background-color: $background;
 }
 
-
 .menu-title {
   display: flex;
   padding: 25px;
@@ -53,10 +52,10 @@ main {
   padding: 5px 0 0 20px;
   margin-top: 20px;
   font-weight: lighter;
+  -webkit-animation: fadein 2s;
 }
 
 .underline {
-  padding-bottom: 5px;
   border-bottom: 3px solid #99e2d0;
   line-height: 30px;
 }
@@ -67,6 +66,8 @@ main {
   width: 95%;
   margin: 10px auto;
   background-color: #fff;
+  animation: dish-load 1000ms ease-in;
+  overflow: hidden;
 }
 
 .menu-desc {
@@ -87,7 +88,7 @@ main {
 .sub-menu :nth-child(2) {
   display: block;
   padding: 0 5px 0 3px;
-  width: 10%;
+  width: 20%;
   font-weight: bold;
 }
 
@@ -96,11 +97,11 @@ main {
   
 }*/
 
-  button {
+button {
   display: block;
   margin: 50px auto;
   min-height: 50px;
-  background:$button-backround;
+  background: $button-backround;
   font-size: 20px;
   text-align: center;
   color: white;
@@ -118,10 +119,53 @@ button:hover {
     left bottom,
     from(#fface8),
     to(#ae80e5)
-    );
+  );
 
   background: linear-gradient(#fface8, #ae80e5);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
- 
+}
+
+@keyframes dish-load {
+  0% {
+    color: white;
+    box-shadow: 0 10px 10px 0 white;
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.check {
+  width: 60px;
+  height: 40px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #99e2d0;
+  margin-top: -37px;
+  padding-top: 25px;
+  margin-right: -65px;
+  transition: margin-right 1500ms ease;
+
+  .fas {
+    transition: transform 1500ms ease 100ms;
+    color: #fff;
+  }
+}
+
+.sub-menu:hover .check {
+  margin-right: 0px;
+  .fas {
+    transform: 1500ms rotate(-300deg);
+  }
 }
