--- a/css/bastille.css
+++ b/css/bastille.css
@@ -9,23 +9,25 @@
 /*******COLORS*******/
 header {
   min-height: 400px;
-  background-color: #f6f6f6;
+  background-color: #eeeeeed5;
 }
 
 .logo {
   display: block;
   margin: auto;
+  justify-content: center;
   height: 30px;
   padding: 15px 0 10px;
 }
 
 .address {
-  height: 30px;
+  height: 20px;
+  display: block;
   justify-content: center;
   background-color: #eaeaea;
   font-size: 16px;
   font-weight: 500;
-  padding: 10px 0 10px 25%;
+  padding: 10px 0 10px 30%;
 }
 
 i {
@@ -90,7 +92,7 @@ main {
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
   margin-top: -15%;
-  background-color: #f6f6f6;
+  background-color: #eeeeeed5;
 }
 
 .menu-title {
