--- a/sass/home.scss
+++ b/sass/home.scss
@@ -94,71 +94,74 @@ i {
 }
 
 .restaurants {
+  height: 100%;
   background-color: $background;
-  min-height: 350px;
-  padding: 10px 0 50px;
-
-  margin-top: 4em;
-
-  //margin-bottom: 10%;
+  margin-top: 3em;
+  margin-bottom: 30%;
 }
 
 .restau-box {
+  position: relative;
   border-radius: 15px;
-  min-height: 100%;
-  min-width: 350px;
-  margin: 10px;
-  background-color: greenyellow;
-  border: 1px solid red;
+  margin: 20px;
+  background-color: #fff;
 }
-
 
 .text-block {
   position: absolute;
-  width: 25%;
-  height: 15%;
-  bottom: 35px;
-  right: 5px;
+  width: 10%;
+  height: 1.8em;
+  bottom: 80%;
+  right: 20px;
   background-color: #99e2d0;
   color: #068a6a;
-  margin: 7.5em 3px;
-  border-radius: 3px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
 }
 
-.text-block h5 {
+/*.text-block h5 {
   position: relative;
   left: 6px;
   top: 6px;
-  text-align: center;
-}
+
+}*/
 
 .rest-subtitle {
   display: block;
   font-size: 23px;
   font-weight: bolder;
   width: 60%;
-  padding: 15% 0 2% 10%;
+  padding: 15% 0 2% 5%;
 }
 
-.rest-container {
-  height: 150px;
-  width: 100%;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
+//changes made-------
+/*.rest-container {
+width: 98%;
+height: 220px; 
+position: relative;
+border-radius: 15px;
+margin-bottom: 2em;
+margin-left: 5px;
+padding-right: auto;
+background-color: #fff;
+
+}*/
 
 .rest-container img {
-  height: 150px;
   width: 100%;
+  height: 150px;
+  object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  object-fit: cover;
+  background-repeat: no-repeat;
+  object-position: center;
 }
 
 .restau-desc {
-  padding: 10px;
+  padding: 5px 1px 2px 2px;
   display: flex;
-  border: 1px solid red;
+  margin: 15px;
 }
 
 .r-desc {
@@ -167,8 +170,6 @@ i {
   color: black;
   font-size: large;
   //font-weight: 500;
-
-  border: 1px solid blue;
 }
 
 a:link {
@@ -177,20 +178,26 @@ a:link {
 
 .r-heart {
   width: 10%;
-  border: 1px solid orangered;
   margin-left: 2em;
+ 
 }
-
 
 .r-heart .heart-f {
   display: none;
+  color: $primary;
 }
 
 .r-heart:hover .heart-o {
   display: none;
+
 }
 
-.r-heart:hover .heart-f{
+.r-heart:hover .heart-f {
   display: block;
- 
+  -webkit-animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
