--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,41 +11,33 @@
 $primary: #9356dc;
 $secondary: #ff79da;
 $tertiary: #063b2e;
-$background: #f6f6f6;
-$font-family:'Shrikhand', 'cursive';
-$link:#ffffff;
+$background: #eeeeeed5;
+$font-family: "Shrikhand", "cursive";
+$link: #ffffff;
 $button-backround: linear-gradient(#ff79da, #9356dc);
-
-
-
-
-
-
-
 
 header {
   min-height: 400px;
   background-color: $background;
 }
 
-
-
 .logo {
   display: block;
   margin: auto;
-  //justify-content: center;
+  justify-content: center;
   height: 30px;
   padding: 15px 0 10px;
 }
 
 .address {
-  height: 30px;
+  height: 20px;
+  display: block;
   justify-content: center;
   //text-align: center;
   background-color: #eaeaea;
   font-size: 16px;
   font-weight: 500;
-  padding: 10px 0 10px 25%;
+  padding: 10px 0 10px 30%;
 }
 
 i {
@@ -53,10 +45,9 @@ i {
 }
 
 a:link {
-  color:$link;
+  color: $link;
   text-decoration: none;
 }
-
 
 footer {
   min-height: 250px;
@@ -80,9 +71,8 @@ footer ul {
 
 footer ul li {
   margin: 15px;
-
 }
- 
+
 footer ul li i {
   padding-right: 6px;
 }
