--- a/sass/legourmand.scss
+++ b/sass/legourmand.scss
@@ -49,10 +49,14 @@ main {
   padding-left: 10%;
 }
 
+
+
+
 .menu-content {
   padding: 5px 0 0 20px;
   margin-top: 20px;
   font-weight: lighter;
+  -webkit-animation: fadein 2s;
 }
 
 .underline {
@@ -67,6 +71,8 @@ main {
   width: 95%;
   margin: 10px auto;
   background-color: #fff;
+  animation: dish-load 1000ms ease-in;
+  overflow: hidden;
 }
 
 .menu-desc {
@@ -87,7 +93,7 @@ main {
 .sub-menu :nth-child(2) {
   display: block;
   padding: 0 5px 0 3px;
-  width: 10%;
+  width: 20%;
   font-weight: bold;
 }
 
@@ -124,4 +130,48 @@ button:hover {
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
  
+}
+
+@keyframes dish-load {
+  0% {
+    color: white;
+    box-shadow: 0 10px 10px 0 white;
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.check {
+  width: 60px;
+  height: 40px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #99e2d0;
+  margin-top: -37px;
+  padding-top: 25px;
+  margin-right: -65px;
+  transition: margin-right 1500ms ease;
+
+  .fas {
+    transition: transform 1500ms ease 100ms;
+    color: #fff;
+  }
+}
+
+.sub-menu:hover .check {
+  margin-right: 0px;
+  .fas {
+    transform: 1500ms rotate(-300deg);
+  }
 }
