--- a/css/fullpalette.css
+++ b/css/fullpalette.css
@@ -177,7 +177,13 @@ button {
 }
 
 button:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#fface8), to(#ae80e5));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#fface8),
+    to(#ae80e5)
+  );
   background: linear-gradient(#fface8, #ae80e5);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
@@ -211,17 +217,34 @@ button:hover {
   padding-top: 25px;
   margin-right: -65px;
   transition: margin-right 1500ms ease;
+  transform: scale(1);
 }
-.check .fas {
-  transition: transform 1500ms ease 100ms;
-  color: #fff;
+
+/*.fas {
+     
+    
+      color: rgb(206, 24, 24);
+      -webkit-transform: rotate(-360deg);
+      transform: rotate(-360deg);
+      transition: transform 1500ms ease;
+    }
+  */
+
+.sub-menu .check i {
+  width: 4px !important;
+  margin-left: 15px;
+  padding: 0 !important;
 }
 
 .sub-menu:hover .check {
   margin-right: 0px;
 }
+
 .sub-menu:hover .check .fas {
-  transform: 1500ms rotate(-300deg);
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+  transition: transform 1s ease;
+  color: #fff;
 }
 
 /*# sourceMappingURL=fullpalette.css.map */
