--- a/css/bastille.css
+++ b/css/bastille.css
@@ -93,6 +93,7 @@ main {
   border-top-right-radius: 25px;
   margin-top: -15%;
   background-color: #eeeeeed5;
+  padding-bottom: 10px;
 }
 
 .menu-title {
@@ -158,17 +159,18 @@ main {
   font-weight: bold;
 }
 
+
 button {
   display: block;
   margin: 50px auto;
-  min-height: 50px;
+  min-height: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  font-size: 20px;
+  font-size: 10px;
   text-align: center;
   color: white;
   border-radius: 25px;
-  width: 50%;
-  padding: 20px auto 20px;
+  width: 30%;
+  padding: 10px auto 10px;
   border: none;
 }
 
