--- a/css/enchanted.css
+++ b/css/enchanted.css
@@ -94,6 +94,8 @@ main {
   border-top-right-radius: 25px;
   margin-top: -6.3em;
   background-color: #eeeeeed5;
+  padding-bottom: 10px;
+  
 }
 
 .menu-title {
@@ -159,23 +161,21 @@ main {
   font-weight: bold;
 }
 
-/*.btn-box {
-  min-height: 130px;
-
-}*/
 button {
   display: block;
   margin: 50px auto;
-  min-height: 50px;
+  min-height: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  font-size: 20px;
+  font-size: 10px;
   text-align: center;
   color: white;
   border-radius: 25px;
-  width: 50%;
-  padding: 20px auto 20px;
+  width: 30%;
+  padding: 10px auto 10px;
   border: none;
 }
+
+
 
 button:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#fface8), to(#ae80e5));
