--- a/css/fullpalette.css
+++ b/css/fullpalette.css
@@ -45,27 +45,32 @@ footer {
   color: #fff;
   padding: 10px;
 }
-
 .footer_logo {
-  padding: 10px 0 0 10px;
-  font-style: italic;
-  margin: 10px 0 0 10px;
+  padding: 5px 0 0 5px;
+  font-family: "Shrikhand", "cursive";
+  font-size: 20px;
 }
 
+
 footer ul {
-  padding-top: 10px;
-  margin: 0px 0 0 10px;
+  padding-top: 5px;
+  margin: 0px 0 0 5px;
   list-style: none;
   color: #ffffff;
+  
 }
 
 footer ul li {
-  margin: 15px;
+  margin: 5px;
+  font-size: 12px;
+
 }
+
 
 footer ul li i {
   padding-right: 6px;
 }
+
 
 nav {
   margin: 15px 0 5px auto;
@@ -81,6 +86,7 @@ header {
   background-size: cover;
   background-image: url("/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
   background-repeat: no-repeat;
+  
 }
 
 .logo {
@@ -91,18 +97,39 @@ main {
   min-height: 400px;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
-  margin-top: -15%;
+  margin-top: -10%;
   background-color: #eeeeeed5;
+  padding-bottom: 10px;
+ 
 }
 
+/* 
+main {
+  min-height: 400px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  margin-top: -6.3em;
+  background-color: #eeeeeed5;
+  padding-bottom: 10px;
+  
+}*/
+
+
+
 .menu-title {
-  display: flex;
-  padding: 25px;
+display: flex;
+
+ background-color: #eeeeeed5;
+ border-top-left-radius: 25px;
+ border-top-right-radius: 25px;
+ padding: 10px;
+ padding-bottom: 30px;
+ 
 }
 
 .fp-title {
   display: block;
-  font-size: 30px;
+  font-size: 25px;
   font-family: "Shrikhand", "cursive";
   width: 100%;
 }
@@ -114,10 +141,11 @@ main {
 }
 
 .menu-content {
-  padding: 5px 0 0 20px;
-  margin-top: 20px;
+  padding: 5px 0 0 15px;
+  margin-top: 5px;
   font-weight: lighter;
   -webkit-animation: fadein 2s;
+
 }
 
 .underline {
@@ -158,21 +186,18 @@ main {
   font-weight: bold;
 }
 
-/*.btn-box {
-  min-height: 130px;
 
-}*/
 button {
   display: block;
   margin: 50px auto;
-  min-height: 50px;
+  min-height: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  font-size: 20px;
+  font-size: 10px;
   text-align: center;
   color: white;
   border-radius: 25px;
-  width: 50%;
-  padding: 20px auto 20px;
+  width: 30%;
+  padding: 10px auto 10px;
   border: none;
 }
 
