--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@
 
 /*******COLORS*******/
 header {
-  min-height: 400px;
+  min-height: 300px;
   background-color: #eeeeeed5;
 }
 
@@ -16,7 +16,7 @@ header {
   display: block;
   margin: auto;
   justify-content: center;
-  height: 30px;
+  height: 18px;
   padding: 15px 0 10px;
 }
 
@@ -25,9 +25,10 @@ header {
   display: block;
   justify-content: center;
   background-color: #eaeaea;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 500;
-  padding: 10px 0 10px 30%;
+  padding: 10px 0 10px 0;
+  text-align: center;
 }
 
 i {
@@ -45,23 +46,28 @@ footer {
   color: #fff;
   padding: 10px;
 }
-
 .footer_logo {
-  padding: 10px 0 0 10px;
-  font-style: italic;
-  margin: 10px 0 0 10px;
+  padding: 5px 0 0 5px;
+  font-family: "Shrikhand", "cursive";
+  font-size: 20px;
 }
 
+
 footer ul {
-  padding-top: 10px;
-  margin: 0px 0 0 10px;
+  padding-top: 5px;
+  margin: 0px 0 0 5px;
   list-style: none;
   color: #ffffff;
+  
 }
 
 footer ul li {
-  margin: 15px;
+  margin: 5px;
+  font-size: 12px;
+
 }
+
+
 
 footer ul li i {
   padding-right: 6px;
@@ -71,39 +77,47 @@ footer ul li i {
   text-align: center;
   padding: 30px;
   font-weight: 900;
-  font-size: 1.5em;
+  font-size: 18px;
 }
 
 .banner-subtitle {
   text-align: center;
-  font-size: 18px;
+  font-size: 12px;
   padding: 10px 0 10px 0;
 }
 
+
 button {
   display: block;
-  justify-content: center;
-  margin: 25px auto;
+  margin: 50px auto;
+  min-height: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  font-size: 15px;
+  font-size: 10px;
+  text-align: center;
   color: white;
-  border-radius: 30px;
-  width: 60%;
-  padding: 15px;
+  border-radius: 25px;
+  width: 30%;
+  padding: 10px auto 10px;
   border: none;
 }
 
 button:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#fface8), to(#ae80e5));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#fface8),
+    to(#ae80e5)
+  );
   background: linear-gradient(#fface8, #ae80e5);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
 }
 
 .how-it-works {
-  padding: 30px 0 5px 30px;
+  padding: 40px 0 3px 20px;
   margin: 10px auto;
-  font-size: 25px;
+  font-size: 18px;
   font-weight: 700;
 }
 
@@ -128,19 +142,22 @@ i {
 }
 
 .label {
-  font-size: l6px;
+  font-size: 12px;
   font-weight: bold;
   justify-content: center;
+  padding-top: 4px;
 }
 
 .circle {
   width: 20px;
-  height: 20px;
-  border-radius: 15px;
+  height: 16px;
+  border-radius: 18px;
   background-color: #9356dc;
   color: #fff;
-  margin: 14px 0 0 -12px;
+  margin: 15px 0 0 -10px;
   text-align: center;
+  font-size: x-small;
+  padding-top: 5px;
 }
 
 .btn-icons {
@@ -155,54 +172,39 @@ i {
   height: 100%;
   background-color: #eeeeeed5;
   margin-top: 3em;
-  margin-bottom: 30%;
+  margin-bottom: 0px;
+  padding-bottom: 50px;
 }
 
 .restau-box {
   position: relative;
   border-radius: 15px;
-  margin: 20px;
+  margin: 15px;
   background-color: #fff;
+  padding-bottom: 1px;
 }
 
 .text-block {
   position: absolute;
-  width: 10%;
-  height: 1.8em;
+  width: 30px;
+  height: 20px;
   bottom: 80%;
-  right: 20px;
+  right: 10px;
   background-color: #99e2d0;
   color: #068a6a;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 5px 20px 0 20px;
   text-align: center;
+  border-radius: 3px;
 }
 
-/*.text-block h5 {
-  position: relative;
-  left: 6px;
-  top: 6px;
-
-}*/
 .rest-subtitle {
   display: block;
-  font-size: 23px;
+  font-size: 18px;
   font-weight: bolder;
   width: 60%;
-  padding: 15% 0 2% 5%;
+  padding: 40px 0 3px 20px;
 }
 
-/*.rest-container {
-width: 98%;
-height: 220px; 
-position: relative;
-border-radius: 15px;
-margin-bottom: 2em;
-margin-left: 5px;
-padding-right: auto;
-background-color: #fff;
-
-}*/
 .rest-container img {
   width: 100%;
   height: 150px;
@@ -216,14 +218,14 @@ background-color: #fff;
 .restau-desc {
   padding: 5px 1px 2px 2px;
   display: flex;
-  margin: 15px;
+  margin: 6px;
 }
 
 .r-desc {
   width: 90%;
   text-align: left;
   color: black;
-  font-size: large;
+  font-size: small;
 }
 
 a:link {
@@ -247,7 +249,6 @@ a:link {
 .r-heart:hover .heart-f {
   display: block;
   -webkit-animation: fadein 2s;
- 
 }
 
 @keyframes fadein {
