--- a/css/legourmand.css
+++ b/css/legourmand.css
@@ -93,6 +93,7 @@ main {
   border-top-right-radius: 25px;
   margin-top: -15%;
   background-color: #eeeeeed5;
+  padding-bottom: 10px;
 }
 
 .menu-title {
@@ -158,26 +159,29 @@ main {
   font-weight: bold;
 }
 
-/*.btn-box {
-  min-height: 130px;
 
-}*/
 button {
   display: block;
   margin: 50px auto;
-  min-height: 50px;
+  min-height: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  font-size: 20px;
+  font-size: 10px;
   text-align: center;
   color: white;
   border-radius: 25px;
-  width: 50%;
-  padding: 20px auto 20px;
+  width: 30%;
+  padding: 10px auto 10px;
   border: none;
 }
 
 button:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#fface8), to(#ae80e5));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#fface8),
+    to(#ae80e5)
+  );
   background: linear-gradient(#fface8, #ae80e5);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
