--- a/css/enchanted.css
+++ b/css/enchanted.css
@@ -6,7 +6,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-/*******COLORS*******/
+
 header {
   min-height: 400px;
   background-color: #eeeeeed5;
@@ -39,6 +39,7 @@ a:link {
   text-decoration: none;
 }
 
+
 footer {
   min-height: 250px;
   background-color: #333;
@@ -47,30 +48,27 @@ footer {
 }
 
 .footer_logo {
-  padding: 10px 0 0 10px;
-  font-style: italic;
-  margin: 10px 0 0 10px;
+  padding: 5px 0 0 1px;
+  font-family: "Shrikhand", "cursive";
+  font-size: 20px;
 }
+
 
 footer ul {
-  padding-top: 10px;
-  margin: 0px 0 0 10px;
+  padding-top: 15px;
   list-style: none;
-  color: #ffffff;
+  color: #ffffff; 
 }
-
 footer ul li {
-  margin: 15px;
+  font-size: 12px;
 }
 
 footer ul li i {
-  padding-right: 6px;
+  padding-left: 5px;
+  margin: -5px;
 }
 
-nav {
-  margin: 15px 0 5px auto;
-  display: flex;
-}
+
 
 nav i {
   margin: 5px auto 5px 20px;
@@ -92,20 +90,25 @@ main {
   min-height: 400px;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
-  margin-top: -6.3em;
+  margin-top: -10%;
   background-color: #eeeeeed5;
   padding-bottom: 10px;
-  
 }
+
+
 
 .menu-title {
   display: flex;
-  padding: 20px;
+  background-color: #eeeeeed5;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  padding: 10px;
+  padding-bottom: 30px;
 }
 
 .enchanted-title {
   display: block;
-  font-size: 30px;
+  font-size: 25px;
   font-family: "Shrikhand", "cursive";
   width: 100%;
 }
@@ -171,14 +174,18 @@ button {
   color: white;
   border-radius: 25px;
   width: 30%;
-  padding: 10px auto 10px;
+  padding: 10px 0 10px;
   border: none;
 }
 
-
-
 button:hover {
-  background: -webkit-gradient(linear, left top, left bottom, from(#fface8), to(#ae80e5));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#fface8),
+    to(#ae80e5)
+  );
   background: linear-gradient(#fface8, #ae80e5);
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
@@ -221,8 +228,12 @@ button:hover {
 .sub-menu:hover .check {
   margin-right: 0px;
 }
+
 .sub-menu:hover .check .fas {
-  transform: 1500ms rotate(-300deg);
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+  transition: transform 1s ease;
+  color: #fff;
 }
 
-/*# sourceMappingURL=enchanted.css.map */
+
