--- a/css/fullpalette.css
+++ b/css/fullpalette.css
@@ -6,7 +6,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-/*******COLORS*******/
+
 header {
   min-height: 400px;
   background-color: #eeeeeed5;
@@ -45,31 +45,34 @@ footer {
   color: #fff;
   padding: 10px;
 }
+
 .footer_logo {
-  padding: 5px 0 0 5px;
+  padding: 5px 0 0 1px;
   font-family: "Shrikhand", "cursive";
   font-size: 20px;
 }
 
 
 footer ul {
-  padding-top: 5px;
-  margin: 0px 0 0 5px;
+  padding-top: 15px;
   list-style: none;
-  color: #ffffff;
-  
+  color: #ffffff; 
 }
-
 footer ul li {
-  margin: 5px;
   font-size: 12px;
-
 }
-
 
 footer ul li i {
-  padding-right: 6px;
+  padding-left: 5px;
+  margin: -5px;
 }
+
+
+
+
+
+
+
 
 
 nav {
@@ -86,7 +89,6 @@ header {
   background-size: cover;
   background-image: url("/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
   background-repeat: no-repeat;
-  
 }
 
 .logo {
@@ -100,31 +102,18 @@ main {
   margin-top: -10%;
   background-color: #eeeeeed5;
   padding-bottom: 10px;
- 
 }
-
-/* 
-main {
-  min-height: 400px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  margin-top: -6.3em;
-  background-color: #eeeeeed5;
-  padding-bottom: 10px;
-  
-}*/
 
 
 
 .menu-title {
-display: flex;
+  display: flex;
 
- background-color: #eeeeeed5;
- border-top-left-radius: 25px;
- border-top-right-radius: 25px;
- padding: 10px;
- padding-bottom: 30px;
- 
+  background-color: #eeeeeed5;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  padding: 10px;
+  padding-bottom: 30px;
 }
 
 .fp-title {
@@ -145,7 +134,6 @@ display: flex;
   margin-top: 5px;
   font-weight: lighter;
   -webkit-animation: fadein 2s;
-
 }
 
 .underline {
@@ -186,7 +174,6 @@ display: flex;
   font-weight: bold;
 }
 
-
 button {
   display: block;
   margin: 50px auto;
@@ -197,7 +184,7 @@ button {
   color: white;
   border-radius: 25px;
   width: 30%;
-  padding: 10px auto 10px;
+  padding: 10px 0 10px;
   border: none;
 }
 
@@ -245,16 +232,6 @@ button:hover {
   transform: scale(1);
 }
 
-/*.fas {
-     
-    
-      color: rgb(206, 24, 24);
-      -webkit-transform: rotate(-360deg);
-      transform: rotate(-360deg);
-      transition: transform 1500ms ease;
-    }
-  */
-
 .sub-menu .check i {
   width: 4px !important;
   margin-left: 15px;
@@ -272,4 +249,4 @@ button:hover {
   color: #fff;
 }
 
-/*# sourceMappingURL=fullpalette.css.map */
+
