--- a/css/home.css
+++ b/css/home.css
@@ -6,10 +6,10 @@
   font-family: "Roboto", sans-serif;
 }
 
-/*******COLORS*******/
 header {
   min-height: 300px;
   background-color: #eeeeeed5;
+  padding-bottom: 10px;
 }
 
 .logo {
@@ -40,38 +40,40 @@ a:link {
   text-decoration: none;
 }
 
+
 footer {
   min-height: 250px;
   background-color: #333;
   color: #fff;
   padding: 10px;
 }
+
 .footer_logo {
-  padding: 5px 0 0 5px;
+  padding: 5px 0 0 1px;
   font-family: "Shrikhand", "cursive";
   font-size: 20px;
 }
 
 
 footer ul {
-  padding-top: 5px;
-  margin: 0px 0 0 5px;
+  padding-top: 15px;
   list-style: none;
-  color: #ffffff;
-  
+  color: #ffffff; 
 }
-
 footer ul li {
-  margin: 5px;
+
   font-size: 12px;
-
+  margin: 5px;
 }
-
-
 
 footer ul li i {
-  padding-right: 6px;
+  align-items: flex-start;
+  padding-left: 5px;
+  margin: -5px;
 }
+
+
+
 
 .banner-title {
   text-align: center;
@@ -92,11 +94,11 @@ button {
   margin: 50px auto;
   min-height: 30px;
   background: linear-gradient(#ff79da, #9356dc);
-  font-size: 10px;
+  font-size: 11px;
   text-align: center;
   color: white;
   border-radius: 25px;
-  width: 30%;
+  width: 40%;
   padding: 10px auto 10px;
   border: none;
 }
@@ -134,6 +136,7 @@ button:hover {
   -webkit-box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   box-shadow: 0px 10px 10px 0px rgba(12, 12, 12, 0.1);
   background: rgba(174, 128, 229, 0.2);
+
 }
 
 i {
