--- a/css/legourmand.css
+++ b/css/legourmand.css
@@ -6,7 +6,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-/*******COLORS*******/
+
 header {
   min-height: 400px;
   background-color: #eeeeeed5;
@@ -39,6 +39,7 @@ a:link {
   text-decoration: none;
 }
 
+
 footer {
   min-height: 250px;
   background-color: #333;
@@ -47,24 +48,24 @@ footer {
 }
 
 .footer_logo {
-  padding: 10px 0 0 10px;
-  font-style: italic;
-  margin: 10px 0 0 10px;
+  padding: 5px 0 0 1px;
+  font-family: "Shrikhand", "cursive";
+  font-size: 20px;
 }
+
 
 footer ul {
-  padding-top: 10px;
-  margin: 0px 0 0 10px;
+  padding-top: 15px;
   list-style: none;
-  color: #ffffff;
+  color: #ffffff; 
 }
-
 footer ul li {
-  margin: 15px;
+  font-size: 12px;
 }
 
 footer ul li i {
-  padding-right: 6px;
+  padding-left: 5px;
+  margin: -5px;
 }
 
 nav {
@@ -91,19 +92,26 @@ main {
   min-height: 400px;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
-  margin-top: -15%;
+  margin-top: -10%;
   background-color: #eeeeeed5;
   padding-bottom: 10px;
 }
 
+
+
 .menu-title {
   display: flex;
-  padding: 25px;
+
+  background-color: #eeeeeed5;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  padding: 10px;
+  padding-bottom: 30px;
 }
 
 .legour-title {
   display: block;
-  font-size: 30px;
+  font-size: 25px;
   font-family: "Shrikhand", "cursive";
   width: 100%;
 }
@@ -170,7 +178,7 @@ button {
   color: white;
   border-radius: 25px;
   width: 30%;
-  padding: 10px auto 10px;
+  padding: 10px 0 10px;
   border: none;
 }
 
@@ -224,8 +232,14 @@ button:hover {
 .sub-menu:hover .check {
   margin-right: 0px;
 }
+
+
+
 .sub-menu:hover .check .fas {
-  transform: 1500ms rotate(-300deg);
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+  transition: transform 1s ease;
+  color: #fff;
 }
 
-/*# sourceMappingURL=legourmand.css.map */
+
