--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-/*******COLORS*******/
+
 header {
   min-height: 400px;
   background-color: #eeeeeed5;
@@ -43,32 +43,30 @@ footer {
   min-height: 250px;
   background-color: #333;
   color: #fff;
-  padding: 5px;
-  display: flex;
+  padding: 10px;
 }
 
 .footer_logo {
-  padding: 5px 0 0 5px;
+  padding: 5px 0 0 1px;
   font-family: "Shrikhand", "cursive";
   font-size: 20px;
 }
 
 
 footer ul {
-  padding-top: 5px;
-  margin: 0px 0 0 5px;
+  padding-top: 15px;
   list-style: none;
   color: #ffffff;
+ 
 }
 
 footer ul li {
-  margin: 5px;
   font-size: 12px;
 }
 
-
 footer ul li i {
-  padding-right: 6px;
+  padding-left: 5px;
+  margin: -5px;
 }
 
 /*# sourceMappingURL=style.css.map */
